[gd_scene load_steps=2 format=3 uid="uid://c8vxr1tmu34xc"]

[ext_resource type="Script" path="res://choose.gd" id="1_8u4bu"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_8u4bu")

[node name="Button" type="Button" parent="."]
offset_left = 294.0
offset_top = 152.0
offset_right = 783.0
offset_bottom = 227.0
text = "Story"

[node name="Button2" type="Button" parent="."]
offset_left = 294.0
offset_top = 315.0
offset_right = 783.0
offset_bottom = 375.0
text = "Endless"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
